RESOLVED FIXED120606
[Qt] Tiled-backing store not clipped to frame or visible rect
https://bugs.webkit.org/show_bug.cgi?id=120606
Summary [Qt] Tiled-backing store not clipped to frame or visible rect
Allan Sandfeld Jensen
Reported 2013-09-02 08:16:06 PDT
If a QGraphicsWebView is part of a larger graphics scene, it it receives paint calls with an 'exposed' area larger than the webview, it painting will be clipped to the exposed area and not to webview.
Attachments
Patch (1.95 KB, patch)
2013-09-02 08:17 PDT, Allan Sandfeld Jensen
no flags
Patch (2.10 KB, patch)
2013-09-02 10:12 PDT, Allan Sandfeld Jensen
no flags
Patch (1.96 KB, patch)
2013-09-03 01:51 PDT, Allan Sandfeld Jensen
no flags
Allan Sandfeld Jensen
Comment 1 2013-09-02 08:17:59 PDT
Allan Sandfeld Jensen
Comment 2 2013-09-02 10:12:24 PDT
Allan Sandfeld Jensen
Comment 3 2013-09-03 01:51:40 PDT
Allan Sandfeld Jensen
Comment 4 2013-09-03 07:45:59 PDT
Comment on attachment 210336 [details] Patch Clearing flags on attachment: 210336 Committed r154983: <http://trac.webkit.org/changeset/154983>
Allan Sandfeld Jensen
Comment 5 2013-09-03 07:46:04 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.